--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
             <version>4.6.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.10.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
